organisation page admin

--- a/admin/page.html
+++ b/admin/page.html
@@ -13,8 +13,14 @@
  </head>
 
  <body>
-     
-
+     <div class="container">
+         <div class="row">
+             <div class="col-s4" id="tiersDroit">
+             </div>
+             <div class="col-s8">
+             </div>
+         </div>
+     </div>
      <!--JavaScript at end of body for optimized loading-->
      <script type="text/javascript" src="js/materialize.min.js"></script>
  </body>
