--- a/etu/page.html
+++ b/etu/page.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col s2" id="Header">
             <h3>AppEDT</h3>
-            <a class="waves-effect waves-light btn">Deconnexion</a>
+            <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
             <img src="../img/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           
