--- a/admin/page.html
+++ b/admin/page.html
@@ -13,11 +13,13 @@
  </head>
 
  <body>
-     <div class="container">
+     <div class="container-fluid fill-height">
          <div class="row">
-             <div class="col-s4" id="tiersDroit">
+             <div class="col s4" id="tiersGauche">
+                 <p>Test test test</p>
              </div>
-             <div class="col-s8">
+             <div class="col s8" id="droite">
+                 <p>Test test test</p>
              </div>
          </div>
      </div>
