--- a/sondage.html
+++ b/sondage.html
@@ -51,21 +51,21 @@
           <div class="col s4">
             <div class="card">
               <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRnm9Jv1qk5Pto-w6vNyktXTGpMSf6P7W43qA-OrG1LmQhnqJC" alt="">
+                <img src="img/smiley.jpg" alt="">
               </div>
             </div>
           </div>
           <div class="col s4">
             <div class="card">
               <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRnm9Jv1qk5Pto-w6vNyktXTGpMSf6P7W43qA-OrG1LmQhnqJC" alt="">
+                <img src="img/smiley (copy).jpg" alt="">
               </div>
             </div>
           </div>
           <div class="col s4">
             <div class="card">
               <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRnm9Jv1qk5Pto-w6vNyktXTGpMSf6P7W43qA-OrG1LmQhnqJC" alt="">
+                <img src="img/smiley (another copy).jpg" alt="">
               </div>
             </div>
           </div>
