--- a/connexion.html
+++ b/connexion.html
@@ -9,7 +9,7 @@
       <link type="text/css" rel="stylesheet" href="css/stylesheetCONNEXION.css" media="screen,projection"/>
  
       <!--Let browser know website is optimized for mobile--> 
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/> 
     </head> 
  
     <body> 
