--- a/connexion.html
+++ b/connexion.html
@@ -15,11 +15,18 @@
     <body> 
       <div class="row"> 
         <div class="col s4" id="gauche"> 
-          <img id="logoensim" src="img/logo_ensim_white.png"> 
+          <img class="responsive-img" src="img/logo_ensim_white.png"> 
         </div> 
         <div class="col s8" id="droite">
           <div id="container">
-            
+            <h2>Connexion</h2>
+            <div id="formulaire">
+              <label for="uname"></label>
+              <input type="text" placeholder="Identifiant" name="uname" required>
+
+              <label for="psw"></label>
+              <input type="password" placeholder="Mot de passe" name="psw" required>
+            </div>
           </div>
         </div> 
          
