--- a/connexion.html
+++ b/connexion.html
@@ -18,15 +18,18 @@
           <img class="responsive-img" src="img/logo_ensim_white.png"> 
         </div> 
         <div class="col s8" id="droite">
-          <div id="container">
-            <h2>Connexion</h2>
+          <div id="container_form" class="container">
+            <h2 class="flow-text">Connexion</h2>
             <div id="formulaire">
+              <form>
               <label for="uname"></label>
               <input type="text" placeholder="Identifiant" name="uname" required>
 
               <label for="psw"></label>
               <input type="password" placeholder="Mot de passe" name="psw" required>
             </div>
+            <button id="bouton_connect" type=submit name="submit">Se connecter</button>
+            </form>
           </div>
         </div> 
          
