--- a/pages/connexion.html
+++ b/pages/connexion.html
@@ -4,9 +4,9 @@
       <!--Import Google Icon Font--> 
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
       <!--Import materialize.css--> 
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> 
+      <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/> 
 
-      <link type="text/css" rel="stylesheet" href="css/stylesheetCONNEXION.css" media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="../css/stylesheetCONNEXION.css" media="screen,projection"/>
  
       <!--Let browser know website is optimized for mobile--> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
@@ -15,7 +15,7 @@
     <body> 
       <div class="row"> 
         <div class="col s4" id="gauche"> 
-          <img class="responsive-img" src="img/logo_ensim_white.png"> 
+          <img class="responsive-img" src="../imgs/logo_ensim_white.png"> 
         </div> 
         <div class="col s8" id="droite">
           <div id="container_form" class="container">
