update version page etu

--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -7,6 +7,7 @@
       <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
       <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
+      <link type="text/css" rel="stylesheet" href="../css/main.css" />
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,12 +19,12 @@
           <div class="col s2" id="Header">
             <h3>AppEDT</h3>
             <a class="waves-effect waves-light btn">Deconnexion</a>
-            <img src="../img/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+            <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           
           <div class="col s10" id="Panel">
             <div id="EDT">
-             <img src="../img/ent.png" alt="sreen edt">
+             <img src="../imgs/ent.png" alt="sreen edt">
             </div>
 
             <div id="Progression">
