--- a/admin/admin.html
+++ b/admin/admin.html
@@ -16,13 +16,13 @@
 <body>
     <div class="row">
         <div class="col s4" id="gauche">
-            <img id="logoensim" src="../img/logo_ensim_white.png">
+            <img id="logoensim" src="../imgs/logo_ensim_white.png">
         </div>
         <div class="col s8" id="droite">
             <div class="row">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
+                <div class="card grey lighten-2">
+                    <div class="card-content grey-text">
+                        <span class="card-title black">Card Title</span>
                         <p>I am a very simple card. I am good at containing small bits of information.
                             I am convenient because I require little markup to use effectively.</p>
                     </div>
