etu fix update style

--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -15,15 +15,15 @@
     <body>
       <div class="container-fluid fill-height">
         <div class="row">
-          <div class="col s2" id="Header">
+          <div class="col s2 custom.cprimary" id="Header">
             <h3>AppEDT</h3>
             <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
-            <img src="../img/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+            <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           
           <div class="col s10" id="Panel">
             <div id="EDT" class="z-depth-2">
-             <img src="../img/ent.png" alt="sreen edt">
+             <img src="../imgs/ent.png" alt="sreen edt">
             </div>
 
             <div id="Progression">
