--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -16,9 +16,9 @@
     <body>
       <div class="container-fluid fill-height">
         <div class="row">
-          <div class="col s2" id="Header">
+          <div class="col s2 custom.cprimary" id="Header">
             <h3>AppEDT</h3>
-            <a class="waves-effect waves-light btn">Deconnexion</a>
+            <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
             <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           
