etu ajout progression

--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -7,6 +7,7 @@
       <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
       <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
+      <link type="text/css" rel="stylesheet" href="../css/main.css" />
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -23,19 +24,20 @@
           
           <div class="col s10" id="Panel">
             <div id="EDT" class="z-depth-2">
-             <img src="../imgs/ent.png" alt="sreen edt">
+             <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt">
             </div>
+
+            <br>
 
             <div id="Progression">
                <div class="z-depth-2">
-                <p class="waves-effect waves-light btn-large">Selection</p>
-                <p class="waves-effect waves-light btn-large">Suggestion</p>
-                <p class="waves-effect waves-light btn-large">Salle</p>
-                <p class="waves-effect waves-light btn-large">Commentaire</p>
-                <p class="waves-effect waves-light btn-large">Sondage</p>
-                <p class="waves-effect waves-light btn-large">Récapitulatif</p>
+                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
+                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p>
+                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
+                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
+                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
+                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
-
             </div>
 
             <div id="Formulaire">
