PAGE TYPE = etu_page

--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -42,7 +42,7 @@
 
             <div id="Formulaire">
               <div class="z-depth-2">
-                <p>Sélectionner le cours sur lequel vous voulez agir</p>
+                <p>Ajouter vos interactions utilisateurs ICI :) </p>
                </div>
             </div>
           </div>
