etu page suggestion

--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -42,9 +42,51 @@
 
             <div id="Formulaire">
               <div class="z-depth-2">
-                <p>Sélectionner les emplacements où ce cours pourrait être déplacé : </p>
+                <p>Sélectionner les emplacements où ce cours pourrait être déplacé : #cours sélectionné</p>
+
+                  <form action="#">
+                    <div class="row">
+                      <div class="col s4 offset-s2">
+                        <p>
+                          <label>
+                            <input name="group1" type="radio" checked />
+                            <span>Suggestion 1</span>
+                          </label>
+                        </p>
+                        <p>
+                          <label>
+                            <input name="group1" type="radio" />
+                            <span>Suggestion 2</span>
+                          </label>
+                        </p>
+                        <p>
+                          <label>
+                            <input class="with-gap" name="group1" type="radio"  />
+                            <span>Suggestion 3</span>
+                          </label>
+                        </p>
+                        <p>
+                          <label>
+                            <input name="group1" type="radio" disabled="disabled" />
+                            <span><i class="material-icons">add</i></span>
+                          </label>
+                        </p>
+                      </div>
+
+                      <p class="col s2 offset-s1">
+                        <label>
+                          <input class="with-gap" name="group1" type="radio"  />
+                          <span>Suggestion 3</span>
+                        </label>
+                      </p>
+                      <p>
+                        <a href="etu_salle.html" class="waves-effect waves-light btn-large">Valider</a> 
+                      </p>
+                      
+                      </div>
+                  </form>
+
                 
-                <a href="etu_salle.html" class="waves-effect waves-light btn-large">Valider</a>
                </div>
             </div>
           </div>
