--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <!--Import Google Icon Font-->
+<head>  <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
+    <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -41,17 +42,15 @@
 
 <div class="row">
 
-    <div class="col s3 " >
+    <div class="col s2 custom.cprimary" id="Header">
+        <h3>AppEDT</h3>
+        <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
+        <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+    </div>
 
-    <ul id="slide-out" class="sidenav sidenav-fixed"   >
-            <li><a href="#!">EDT</a></li>
-        <a href="#!" class="brand-logo">
-            <img src="img\logo.png">
-        </a>
 
-        </ul></div>
+    <div class=" raw col s8" class="container">
 
-<div class=" raw col s9" class="container">
     <nav>
 
 
@@ -74,7 +73,6 @@
         </div>
     </nav>
 
-    <div class="row">
 
 
         <h3>Notifications</h3>
@@ -93,13 +91,13 @@
 
                 <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
                 <td>12:36</td>
-                <td> <a href="#"> Voir</a></td>
+                <td> <a href="pages/etu_page.html"> Voir</a></td>
             </tr>
 
             <tr>
                 <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
                 <td>11:20</td>
-                <td> <a href="#"> Voir</a></td>            </tr>
+                <td> <a href="pages/etu_page.html"> Voir</a></td>            </tr>
 
             <tr>
                 <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
@@ -109,7 +107,6 @@
         </table>
 
         <hr/>
-    </div>
 
 </div>
 
