add offset panel

--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -22,7 +22,7 @@
             <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           
-          <div class="col s10" id="Panel">
+          <div class="col s10 offset-s2" id="Panel">
             <div id="EDT">
              <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt">
             </div>
