etu tentative fix row + add chexbox

--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -42,7 +42,7 @@
 
             <div id="Formulaire">
               <div class="z-depth-2">
-                <p>Ajouter vos interactions utilisateurs ICI :) </p>
+                <h6>Ajouter vos interactions utilisateurs ICI :) </h6>
                </div>
             </div>
           </div>
