--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -48,8 +48,8 @@
         <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
     </div>
 
+    <div class="col s10 offset-s2" id="Panel">
 
-    <div class=" raw col s8" class="container">
 
     <nav>
 
@@ -69,6 +69,9 @@
 
 
                 <li><a href="https://www.jquery-az.com/bootstrap-tips-tutorials/"><i class="material-icons">search</i></a></li>
+                <li><a href="https://www.jquery-az.com/javascript-tutorials/"><span >Effectuer une recherche</span></a></li>
+
+
             </ul>
         </div>
     </nav>
@@ -108,9 +111,8 @@
 
         <hr/>
 
-</div>
 
-
+    </div>
 
 </div></div>
 </body>
