--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -11,6 +11,8 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <script type = "text/javascript"
+                src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
     </head>
 
     <body>
