--- a/pages/prof_passerdemandedep.html
+++ b/pages/prof_passerdemandedep.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
     <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
 
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -52,6 +53,7 @@
         <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
         <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
     </div>
+    <div class="col s10 offset-s2" id="Panel">
 
 
     <div class=" raw col s8" class="container">
@@ -84,35 +86,10 @@
             <div class="row">
                 <form class="col s8">
                     <div class="row" >
-                        <div class="input-field col s6">
 
-                            <input placeholder="Classe concernée" id="title" type="text" class="validate">
-                            <label for="title"></label>
-                        </div>
                     </div>
 
-                        <div class = "row">
-                            <label>Materialize Select</label>
-                            <select>
-                                <option value = "" disabled selected>Select Fruit</option>
-                                <option value = "1">Mango</option>
-                                <option value = "2">Orange</option>
-                                <option value = "3">Apple</option>
-                            </select>
-                        </div>
-
                     <div class="row">
-                        <div class="input-field col s6">
-                            <select>
-                                <option value="" disabled selected>Choose event type</option>
-                                <option value="1">Option 1</option>
-                                <option value="2">Option 2</option>
-                                <option value="3">Option 3</option>
-                            </select>
-                            <label>Event type</label>
-                        </div>
-
-                        <div class="row">
                             <div class="input-field col s6">
                                 <label></label>
                                 <input id="beginDate" type="date" class="datepicker">
@@ -144,13 +121,15 @@
                     <input type="text" class="datepicker">
 
                 </form>-->
+                </form>
             </div>
 
+        </div>
+        </div>
+    </div>
 
-            <hr/>
-        </div>
-        </div>
-    </div></form>
+
+</div>
 
     </div>
 
