--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -25,7 +25,7 @@
           <div class="col s10 offset-s2" id="Panel">
                 <div class="row" style="margin-bottom: 0">
                      <div class="col s12 ">
-                         <div class="card blue-grey darken-1">
+                         <div class="card blue lighten-4">
                              <div class="card-content white-text">
                                  <span class="card-title">Card Title</span>
                                  <p>I am a very simple card. I am good at containing small bits of information.
@@ -40,7 +40,7 @@
                  </div>
                  <div class="row" style="margin-bottom: 0">
                      <div class="col s12 ">
-                         <div class="card blue-grey darken-1">
+                         <div class="card blue lighten-4">
                              <div class="card-content white-text">
                                  <span class="card-title">Card Title</span>
                                  <p>I am a very simple card. I am good at containing small bits of information.
@@ -55,7 +55,7 @@
                  </div>
                  <div class="row" style="margin-bottom: 0">
                      <div class="col s12 ">
-                         <div class="card blue-grey darken-1">
+                         <div class="card blue lighten-4">
                              <div class="card-content white-text">
                                  <span class="card-title">Card Title</span>
                                  <p>I am a very simple card. I am good at containing small bits of information.
