Nouveau style cards

--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -25,15 +25,14 @@
           <div class="col s10 offset-s2" id="Panel">
                 <div class="row" style="margin-bottom: 0">
                      <div class="col s12 ">
-                         <div class="card blue lighten-4">
+                         <div class="card grey lighten-1">
                              <div class="card-content white-text">
-                                 <span class="card-title">Card Title</span>
-                                 <p>I am a very simple card. I am good at containing small bits of information.
-                                     I am convenient because I require little markup to use effectively.</p>
+                                 <span class="card-title">Baptiste INGOGLIA</span>
+                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#">This is a link</a>
-                                 <a href="#">This is a link</a>
+                                 <a href="#">Consulter</a>
+                                 <a href="#">Refuser</a>
                              </div>
                          </div>
                      </div>
