--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -73,13 +73,13 @@
                         </p>
                       </div>
 
-                      <p class="col s2 offset-s1">
+                      <p class="col s2">
                         <label>
                           <input class="with-gap" name="group1" type="radio"  />
                           <span>Libre</span>
                         </label>
                       </p>
-                      <p>
+                      <p class="col s2 offset-s1">
                         <a href="etu_salle.html" class="waves-effect waves-light btn-large">Valider</a> 
                       </p>
                     
