--- a/pages/prof_passerdemandedep.html
+++ b/pages/prof_passerdemandedep.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <!--Import Google Icon Font-->
@@ -9,24 +8,9 @@
     <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
 
 
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-
-<body>
-
-<!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="js/materialize.min.js"></script>
-
-
-<script>
-    $(document).ready(function() {
-        $('select').material_select();
-    });
-</script>
-<!DOCTYPE html>
-<html>
-<head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -39,10 +23,22 @@
 
     </style>
 </head>
-<!--<ul id="slide-out" class="sidenav sidenav-fixed"  class="card-panel teal lighten-2">
-    <li><a href="#!">First Sidebar Link</a></li>
-    <li><a href="#!">Second Sidebar Link</a></li>
-</ul>-->
+
+
+<!--JavaScript at end of body for optimized loading-->
+
+<script type="text/javascript" src="../js/materialize.min.js"></script>
+
+
+<script type="text/javascript">
+    M.AutoInit();
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.dropdown-trigger');
+        var instances = M.Dropdown.init(elems, options);
+    });
+    // Or with jQuery
+    //$('.dropdown-trigger').dropdown();
+</script>
 
 <body>
 
@@ -56,7 +52,6 @@
     <div class="col s10 offset-s2" id="Panel">
 
 
-    <div class=" raw col s8" class="container">
         <nav>
 
 
@@ -74,68 +69,151 @@
                     <li><a href="https://www.jquery-az.com/javascript-tutorials/"><span >Passer une demande de déplacement</span></a></li>
 
 
+
+
                     <li><a href="https://www.jquery-az.com/bootstrap-tips-tutorials/"><i class="material-icons">search</i></a></li>
+                    <li><a href="https://www.jquery-az.com/javascript-tutorials/"><span >Effectuer une recherche</span></a></li>
+
                 </ul>
             </div>
         </nav>
 
+
+
+        <h3>Passer une demande de déplacement</h3>
         <div class="row">
+            <form class="col s8">
+                <div class="row">
 
 
-            <h3>Passer une demande de déplacement</h3>
-            <div class="row">
-                <form class="col s8">
-                    <div class="row" >
+                    <div class="input-field col s6">
+                        <label> Classe concernée</label>
+                    </div></div>
 
+                <div class="row">
+
+
+                    <div class="input-field col s6">
+                        <label></label>
+                        <input placeholder = "classe" value = "4ips" id = "name" type = "text" >
+                    </div></div>
+
+                <div class="row">
+
+
+                    <div class="input-field col s6">
+                        <label> choisir une date</label>
+                    </div></div>
+
+
+
+
+                <div class="row">
+
+
+                    <div class="input-field col s6">
+                        <label></label>
+                        <input id="beginDate" type="date" class="datepicker">
+                    </div></div>
+
+
+                <div class="row">
+
+
+                    <div class="input-field col s6">
+                        <label> choisir un créneau</label>
+                    </div></div>
+                <div class="container">
+
+                    <div class = "row">
+
+
+                        <div class="input-field col s6">
+                            <select class="browser-default waves-effect waves-light btn">
+                                <option value="" disabled="" selected="">Choose your option</option>
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                            </select>
+                        </div></div></div>
+                <div class="row">
+
+
+                    <div class="input-field col s6">
+                        <label> choisir une salle</label>
+                    </div></div>
+                <div class="container">
+
+                    <div class = "row">
+
+
+                        <div class="input-field col s6">
+                            <select class="browser-default waves-effect waves-light btn">
+                                <option value="" disabled="" selected="">Choose your option</option>
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                            </select>
+                        </div></div></div>
+
+                <div class = "row">
+                    <div class = "input-field col s12">
+                        <input placeholder = "Comments (Disabled)" id = "comments"
+                               type = "text" disabled />
+                        <label for = "comments">Comments</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                            <div class="input-field col s6">
-                                <label></label>
-                                <input id="beginDate" type="date" class="datepicker">
-                            </div></div>
-                        <div class = "row">
-                            <div class = "input-field col s12">
-                                <input placeholder = "Comments (Disabled)" id = "comments"
-                                       type = "text" disabled />
-                                <label for = "comments">Comments</label>
+                <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+
+                <!-- Dropdown Structure -->
+                <ul id='dropdown1' class='dropdown-content'>
+                    <li><a href="#!">one</a></li>
+                    <li><a href="#!">two</a></li>
+                    <li class="divider" tabindex="-1"></li>
+                    <li><a href="#!">three</a></li>
+                    <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                    <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                </ul>
+
+                <!--<div class="row">
+                    <form class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                <label for="textarea1">Classe concernée</label>
                             </div>
                         </div>
+                        <label>Salle libre</label>
+                        <select disabled>
+                            <option value="" disabled selected>Choisir la classe</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
+                            <option value="3">Option 3</option>
+                        </select>
 
-            <!--<div class="row">
-                <form class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
-                            <label for="textarea1">Classe concernée</label>
-                        </div>
-                    </div>
-                    <label>Salle libre</label>
-                    <select disabled>
-                        <option value="" disabled selected>Choisir la classe</option>
-                        <option value="1">Option 1</option>
-                        <option value="2">Option 2</option>
-                        <option value="3">Option 3</option>
-                    </select>
+                        <input type="text" class="datepicker">
 
-                    <input type="text" class="datepicker">
-
-                </form>-->
-                </form>
-            </div>
-
+                    </form>-->
+            </form>
         </div>
-        </div>
+
     </div>
+</div>
+</div>
+
 
 
 </div>
 
-    </div>
-
 
 
 </div></div>
+
+<!--
+<script src="../js/select.js"></script>
+-->
+
 </body>
 </html>
 
