couleur bouton page demande

--- a/pages/admin_demande.html
+++ b/pages/admin_demande.html
@@ -38,8 +38,8 @@
                                  <p>Eh'Manu Tu Descends</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#" class="white-text">Consulter</a>
-                                 <a href="#" class="red-text">Refuser</a>
+                                 <a href="#" class=" green btn waves-effect waves-light"><i class="material-icons left">check</i>Accepter</a>
+                                 <a href="#" class="red waves-effect waves-light btn"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
