fix affichage EDT

--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -20,8 +20,8 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js'></script>
 
   <!-- Pour ICAL -->
-  <script src="/home/leo/WebstormProjects/AppEDT/js/ical.js-master/build/ical.js"></script>
-  <script src="/home/leo/WebstormProjects/AppEDT/js/ical.js-master/build/ical.min.js"></script>
+  <script src="../js/ical.js-master/build/ical.js"></script>
+  <script src="../js/ical.js-master/build/ical.min.js"></script>
 
 
   <!--Let browser know website is optimized for mobile-->
