liens entre page etu

--- a/pages/etu_commentaire.html
+++ b/pages/etu_commentaire.html
@@ -31,10 +31,10 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
-                <p class="waves-effect waves-light btn custom.cprimary">Suggestion</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_suggestion.html" style="color: white;">Suggestion</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary">Commentaire</p>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
@@ -53,7 +53,7 @@
                       </div>
                     </div>
                     <p class="col s2 offset-s1">
-                      <a href="etu_salle.html" class="waves-effect waves-light btn-large">Valider</a> 
+                      <a href="etu_sondage.html" class="waves-effect waves-light btn-large">Valider</a> 
                     </p>
                   </form>
                </div>
