--- a/pages/etu_recap.html
+++ b/pages/etu_recap.html
@@ -31,12 +31,12 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
-                <p class="waves-effect waves-light btn custom.cprimary">Suggestion</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sugestion.html" style="color: white;">Suggestion</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_commentaire.html" style="color: white;">Commentaire</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sondage.html" style="color: white;"></a>Sondage</p>
+                 <p class="waves-effect waves-light btn custom.cprimary">Récapitulatif</p>
                </div>
             </div>
 
@@ -56,7 +56,7 @@
                <!--  refaire la card avec une hiérarchie de couleur (foncé/clair) et non de taille -->
                       
                 <p class="col s2 offset-s1">
-                  <a href="etu_salle.html" class="waves-effect waves-light btn-large">Terminer </a> 
+                  <a href="#" class="waves-effect waves-light btn-large">Terminer </a> 
                 </p> 
               </div>
             </div>
