--- a/pages/etu_sondage.html
+++ b/pages/etu_sondage.html
@@ -31,11 +31,11 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
-                <p class="waves-effect waves-light btn custom.cprimary">Suggestion</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sugestion.html" style="color: white;">Suggestion</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_commentaire.html" style="color: white;">Commentaire</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary">Sondage</p>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
             </div>
@@ -45,10 +45,10 @@
                 <h6>Sélectionner la salle que ou souhaité ou ses caractéristiques : #cours sélectionné</h6>
 <!-- <br> -->
                 <div class="col s4 offset-s2">
-                  <a href="#" class="waves-effect waves-light btn-large">Créer un sondage</a> 
+                  <a href="sondage.html" class="waves-effect waves-light btn-large">Créer un sondage</a> 
                 </div>
                 <div class="col s4 offset-s2">
-                  <a href="#" class="waves-effect waves-light btn-large">Y a déjà consensus !</a> 
+                  <a href="etu_recap.html" class="waves-effect waves-light btn-large">Y a déjà consensus !</a> 
                 </div>             
               </div>
             </div>
