--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -31,7 +31,7 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary">Suggestion</p>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
