--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -65,7 +65,7 @@
 
 
                 <li><a href="https://www.jquery-az.com/javascript-tutorials/"><i class="material-icons">school</i></a></li>
-                <li><a href="https://www.jquery-az.com/javascript-tutorials/"><span >Passer une demande de déplacement</span></a></li>
+                <li><a href="prof_passerdemandedep.html"><span >Passer une demande de déplacement</span></a></li>
 
 
                 <li><a href="https://www.jquery-az.com/bootstrap-tips-tutorials/"><i class="material-icons">search</i></a></li>
