--- a/pages/prof_passerdemandedep.html
+++ b/pages/prof_passerdemandedep.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
     <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
-
+    <link type="text/css" rel="stylesheet" href="../css/main.css" />
 
 
     <!--Let browser know website is optimized for mobile-->
@@ -20,25 +20,8 @@
             font-size: 14px;
         }
 
-
     </style>
 </head>
-
-
-<!--JavaScript at end of body for optimized loading-->
-
-<script type="text/javascript" src="../js/materialize.min.js"></script>
-
-
-<script type="text/javascript">
-    M.AutoInit();
-    document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.dropdown-trigger');
-        var instances = M.Dropdown.init(elems, options);
-    });
-    // Or with jQuery
-    //$('.dropdown-trigger').dropdown();
-</script>
 
 <body>
 
@@ -77,7 +60,6 @@
                 </ul>
             </div>
         </nav>
-
 
 
         <h3>Passer une demande de déplacement</h3>
@@ -128,14 +110,19 @@
                     <div class = "row">
 
 
-                        <div class="input-field col s6">
-                            <select class="browser-default waves-effect waves-light btn">
-                                <option value="" disabled="" selected="">Choose your option</option>
-                                <option value="1">Option 1</option>
-                                <option value="2">Option 2</option>
-                                <option value="3">Option 3</option>
-                            </select>
-                        </div></div></div>
+                        <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Créneau</a>
+
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">08:00 - 09:15</a></li>
+                            <li><a href="#!">09:30 - 10:45</a></li>
+                            <li><a href="#!">11:00 - 12:15</a></li>
+                            <li><a href="#!">13:45 - 15:00</a></li>
+                            <li><a href="#!">15:15 - 16:30</a></li>
+                            <li><a href="#!">16:45 - 18:00</a></li>
+
+                        </ul>
+                    </div></div>
                 <div class="row">
 
 
@@ -147,14 +134,22 @@
                     <div class = "row">
 
 
-                        <div class="input-field col s6">
-                            <select class="browser-default waves-effect waves-light btn">
-                                <option value="" disabled="" selected="">Choose your option</option>
-                                <option value="1">Option 1</option>
-                                <option value="2">Option 2</option>
-                                <option value="3">Option 3</option>
-                            </select>
-                        </div></div></div>
+                        <a class='dropdown-trigger btn' href='#' data-target='dropdown2'>Salle</a>
+
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown2' class='dropdown-content'>
+                            <li><a href="#!">TD1</a></li>
+                            <li><a href="#!">TD2</a></li>
+                            <li><a href="#!">TD3</a></li>
+                            <li><a href="#!">TD4</a></li>
+                            <li><a href="#!">I01</a></li>
+                            <li><a href="#!">I02</a></li>
+
+                        </ul>
+                    </div></div>
+
+
+
 
                 <div class = "row">
                     <div class = "input-field col s12">
@@ -163,18 +158,6 @@
                         <label for = "comments">Comments</label>
                     </div>
                 </div>
-
-                <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
-
-                <!-- Dropdown Structure -->
-                <ul id='dropdown1' class='dropdown-content'>
-                    <li><a href="#!">one</a></li>
-                    <li><a href="#!">two</a></li>
-                    <li class="divider" tabindex="-1"></li>
-                    <li><a href="#!">three</a></li>
-                    <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-                    <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
-                </ul>
 
                 <!--<div class="row">
                     <form class="col s12">
@@ -213,6 +196,20 @@
 <!--
 <script src="../js/select.js"></script>
 -->
+<!--JavaScript at end of body for optimized loading-->
+
+<script type="text/javascript" src="../js/materialize.min.js"></script>
+<script type="text/javascript">
+    M.AutoInit();
+</script>
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.dropdown-trigger');
+        var instances = M.Dropdown.init(elems, options);
+
+    });
+</script>
+
 
 </body>
 </html>
