--- a/pages/etu_recap.html
+++ b/pages/etu_recap.html
@@ -32,10 +32,10 @@
             <div id="Progression">
               <div class="z-depth-2">
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sugestion.html" style="color: white;">Suggestion</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_suggestion.html" style="color: white;">Suggestion</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_commentaire.html" style="color: white;">Commentaire</a></p>
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sondage.html" style="color: white;"></a>Sondage</p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sondage.html" style="color: white;">Sondage</a></p>
                  <p class="waves-effect waves-light btn custom.cprimary">Récapitulatif</p>
                </div>
             </div>
