encore une correction

--- a/pages/etu_sondage.html
+++ b/pages/etu_sondage.html
@@ -32,7 +32,7 @@
             <div id="Progression">
               <div class="z-depth-2">
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_sugestion.html" style="color: white;">Suggestion</a></p>
+                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_suggestion.html" style="color: white;">Suggestion</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_commentaire.html" style="color: white;">Commentaire</a></p>
                 <p class="waves-effect waves-light btn custom.cprimary">Sondage</p>
